--- a/package.json
+++ b/package.json
@@ -2,5 +2,28 @@
   "dependencies": {
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "firstnodeapi",
+  "version": "1.0.0",
+  "description": "firstnodapi",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vijaywar/nodeapi.git"
+  },
+  "keywords": [
+    "me",
+    "and",
+    "me"
+  ],
+  "author": "vijay",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vijaywar/nodeapi/issues"
+  },
+  "homepage": "https://github.com/vijaywar/nodeapi#readme"
 }
